jena-owl2: ver 1.3.1-SNAPSHOT: switch to use java17 & jena-5.0.0